Added dummy backend return of data (dataData.json). This json is read and menu entries are generated based on keys. Menu consists of four sliders for opacity, dates and min and max value. Opacity and dates sliders are already functional. Dates change is enabled only if the product checkbox is checked. Sliders are spanned by clicking the area to the right of the product name. Need to add dummy button (Span product options here).

--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "dns": "file:./src/mock/dns",
     "fetch": "^1.1.0",
     "materialize-css": "^1.0.0",
+    "moment": "^2.24.0",
     "net": "file:./src/mock/net",
-    "ol": "^5.2.0"
+    "nouislider": "^14.0.1",
+    "ol": "^5.2.0",
+    "wnumb": "^1.1.0"
   },
   "peerDependencies": {},
   "devDependencies": {
