--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "aurelia-typed-observable-plugin": "^0.4.2",
     "aurelia-validation": "^1.3.2",
     "bluebird": "^3.5.2",
+    "chart.js": "^2.9.3",
     "d3": "^5.7.0",
     "dns": "file:./src/mock/dns",
+    "downloadjs": "^1.4.7",
     "fetch": "^1.1.0",
     "materialize-css": "^1.0.0",
     "moment": "^2.24.0",
