Added english translation. Still have to fix issues exposed in previous commit and translate the login page.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "downloadjs": "^1.4.7",
     "fetch": "^1.1.0",
     "i18next": "^19.7.0",
+    "i18next-browser-languagedetector": "^6.0.1",
     "i18next-resource-store-loader": "^0.1.2",
     "i18next-xhr-backend": "^3.2.2",
     "materialize-css": "^1.0.0",
