--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aurelia-bootstrapper": "^2.3.0",
     "aurelia-i18n": "^3.1.2",
     "aurelia-materialize-bridge": "^1.1.10",
+    "aurelia-plugins-cookie-consent": "^2.6.0",
     "aurelia-polyfills": "^1.3.0",
     "aurelia-typed-observable-plugin": "^0.4.2",
     "aurelia-validation": "^1.3.2",
