--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webmapproject",
+  "name": "Sattilia",
   "description": "An Aurelia client application.",
   "version": "0.1.0",
   "repository": {
@@ -19,6 +19,8 @@
     "aurelia-typed-observable-plugin": "^0.4.2",
     "aurelia-validation": "^1.3.2",
     "bluebird": "^3.5.2",
+    "browserslist": "^4.14.5",
+    "caniuse-lite": "^1.0.30001146",
     "chart.js": "^2.9.3",
     "d3": "^5.7.0",
     "dns": "file:./src/mock/dns",
